// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="Dog"
  >
    <h1>
      Pancake
    </h1>
    <p>
      Pancake has been adopted!
    </p>
  </div>
</DocumentFragment>
`;

exports[`should match snapshot with isAdopted to false 1`] = `
<DocumentFragment>
  <div
    class="Dog"
  >
    <h1>
      Pancake
    </h1>
    <button>
      Adopt me!
    </button>
  </div>
</DocumentFragment>
`;

exports[`should match snapshot with isAdopted to true 1`] = `
<DocumentFragment>
  <div
    class="Dog"
  >
    <h1>
      Pancake
    </h1>
    <p>
      Pancake has been adopted!
    </p>
  </div>
</DocumentFragment>
`;
